[package]
name = "rust-proxy-image-s3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
log = "0.4.0"
env_logger = "0.9.0"
regex = "1"
rust-s3 = { version = "0.32.3", features = ["no-verify-ssl"] }
aws-region = "0.25.3"
image = "0.24.0"
actix-files = "0.6.0"
